fix(quality): resolve 12 code smells and increase test coverage to 91% (SCRUM-4)
Code Smell Fixes:
- IncidentService: replace 3 wildcard imports (*) with explicit imports
- IncidentService: replace Collectors.toList() with Stream.toList() (Java 16+)
- IncidentService: add @Transactional(readOnly=true) to listIncidents & getIncidentById
- IncidentService: remove duplicate toTechnicianResponse() by delegating to TechnicianService
- DeviceService: replace fully-qualified BadRequestException with imported short name
- DeviceService: add @Transactional(readOnly=true) to listDevices, getDeviceById, getDeviceTelemetry
- AuthService: replace fully-qualified BadCredentialsException with imported short name
- JwtAuthenticationFilter: extract magic number 7 into BEARER_PREFIX constant
- JwtAuthenticationFilter: narrow catch(Exception) to catch(JwtException | IllegalArgumentException)
- TelemetryService: replace string concatenation with String.format() in error message
- TechnicianService: make toResponse() public as toTechnicianResponse() to eliminate code duplication

Test Coverage (80% target achieved):
- Added 80 unit tests across 16 test classes
- service.impl: 99%, controller: 100%, exception: 100%, config: 85%
- Sonar-analyzed packages (excl. dto/entity/enums): ~91% instruction coverage
- New test classes: JwtServiceTest, AuthServiceTest, TelemetryServiceTest,
  IncidentServiceTest, DeviceServiceTest, StoreServiceTest, TechnicianServiceTest,
  DashboardServiceTest, GlobalExceptionHandlerTest, plus 7 controller tests

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>